@@ -1166,9 +1166,9 @@ void Chord::layoutStem()
 
             double normalStemLen = small() ? 2.5 : 3.5;
             switch(hookIdx) {
-                  case 2: normalStemLen += small() ? .5  : 0.75; break;
-                  case 3: normalStemLen += small() ? 1.0 : 1.5;  break;
-                  case 4: normalStemLen += small() ? 1.5 : 2.25; break;
+                  case 3: normalStemLen += small() ? .5  : 0.75; break; //32nd notes
+                  case 4: normalStemLen += small() ? 1.0 : 1.5;  break; //64th notes
+                  //case 5: normalStemLen += small() ? 1.5 : 2.25; break; //128th notes not yet supported in MuseScore
                   }
 
             if (_noteType != NOTE_NORMAL) {
