@@ -1,6 +1,7 @@
 10.oct (db)
       - fix local handbook disabled when no file is open
       - fix #7425: Space bar for play/pause (and zero for rests)
+      - correct stem lengths for multi-flag notes (see bug #7415)
 8.oct (ws)
       - fix #7416: triplet causes crash
       - fix #7418: crash when delete soundfont while playing
